--- a/templates/index.html
+++ b/templates/index.html
@@ -200,6 +200,7 @@
         <div class="text-center mt-8 text-gray-500 text-sm">
             <p>Built using PyTorch & AlexNet</p>
             <p class="mt-1">Trained on ImageNet • 1000+ object categories</p>
+            <p class="mt-2">Created by <a href="https://github.com/SujitChintala" target="_blank" class="text-blue-600 hover:text-blue-800 hover:underline">Sujit Chintala</a></p>
         </div>
     </div>
 
